// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render "" correctly 1`] = `
<button
  className="Button "
>
  <div
    className="flex layout-centered"
  >
    <div>
      Clickity click
    </div>
  </div>
</button>
`;

exports[`Button should render "primary" correctly 1`] = `
<button
  className="Button Button--primary"
>
  <div
    className="flex layout-centered"
  >
    <div>
      Clickity click
    </div>
  </div>
</button>
`;

exports[`Button should render "with an icon" correctly 1`] = `
<button
  className="Button "
>
  <div
    className="flex layout-centered"
  >
    <svg
      className="Icon Icon-star mr1"
      fill="currentcolor"
      height={14}
      name="star"
      size={14}
      viewBox="0 0 32 32"
      width={14}
    >
      <path
        d="M16 0 L21 11 L32 12 L23 19 L26 31 L16 25 L6 31 L9 19 L0 12 L11 11"
      />
    </svg>
    <div>
      Clickity click
    </div>
  </div>
</button>
`;

exports[`CheckBox should render "Default - Off" correctly 1`] = `
<div
  className="cursor-pointer"
  onClick={[Function]}
>
  <div
    className="flex align-center justify-center rounded"
    style={
      Object {
        "backgroundColor": "white",
        "border": "2px solid #ddd",
        "height": 16,
        "width": 16,
      }
    }
  />
</div>
`;

exports[`CheckBox should render "Green" correctly 1`] = `
<div
  className="cursor-pointer"
  onClick={[Function]}
>
  <div
    className="flex align-center justify-center rounded"
    style={
      Object {
        "backgroundColor": "#9CC177",
        "border": "2px solid #9CC177",
        "height": 16,
        "width": 16,
      }
    }
  >
    <svg
      className="Icon Icon-check"
      fill="currentcolor"
      height={12}
      name="check"
      size={12}
      style={
        Object {
          "color": "white",
        }
      }
      viewBox="0 0 32 32"
      width={12}
    >
      <path
        d="M1 14 L5 10 L13 18 L27 4 L31 8 L13 26 z "
      />
    </svg>
  </div>
</div>
`;

exports[`CheckBox should render "On - Default blue" correctly 1`] = `
<div
  className="cursor-pointer"
  onClick={[Function]}
>
  <div
    className="flex align-center justify-center rounded"
    style={
      Object {
        "backgroundColor": "#509EE3",
        "border": "2px solid #509EE3",
        "height": 16,
        "width": 16,
      }
    }
  >
    <svg
      className="Icon Icon-check"
      fill="currentcolor"
      height={12}
      name="check"
      size={12}
      style={
        Object {
          "color": "white",
        }
      }
      viewBox="0 0 32 32"
      width={12}
    >
      <path
        d="M1 14 L5 10 L13 18 L27 4 L31 8 L13 26 z "
      />
    </svg>
  </div>
</div>
`;

exports[`CheckBox should render "Purple" correctly 1`] = `
<div
  className="cursor-pointer"
  onClick={[Function]}
>
  <div
    className="flex align-center justify-center rounded"
    style={
      Object {
        "backgroundColor": "#A989C5",
        "border": "2px solid #A989C5",
        "height": 16,
        "width": 16,
      }
    }
  >
    <svg
      className="Icon Icon-check"
      fill="currentcolor"
      height={12}
      name="check"
      size={12}
      style={
        Object {
          "color": "white",
        }
      }
      viewBox="0 0 32 32"
      width={12}
    >
      <path
        d="M1 14 L5 10 L13 18 L27 4 L31 8 L13 26 z "
      />
    </svg>
  </div>
</div>
`;

exports[`CheckBox should render "Red" correctly 1`] = `
<div
  className="cursor-pointer"
  onClick={[Function]}
>
  <div
    className="flex align-center justify-center rounded"
    style={
      Object {
        "backgroundColor": "#EF8C8C",
        "border": "2px solid #EF8C8C",
        "height": 16,
        "width": 16,
      }
    }
  >
    <svg
      className="Icon Icon-check"
      fill="currentcolor"
      height={12}
      name="check"
      size={12}
      style={
        Object {
          "color": "white",
        }
      }
      viewBox="0 0 32 32"
      width={12}
    >
      <path
        d="M1 14 L5 10 L13 18 L27 4 L31 8 L13 26 z "
      />
    </svg>
  </div>
</div>
`;

exports[`CheckBox should render "Yellow" correctly 1`] = `
<div
  className="cursor-pointer"
  onClick={[Function]}
>
  <div
    className="flex align-center justify-center rounded"
    style={
      Object {
        "backgroundColor": "#f9d45c",
        "border": "2px solid #f9d45c",
        "height": 16,
        "width": 16,
      }
    }
  >
    <svg
      className="Icon Icon-check"
      fill="currentcolor"
      height={12}
      name="check"
      size={12}
      style={
        Object {
          "color": "white",
        }
      }
      viewBox="0 0 32 32"
      width={12}
    >
      <path
        d="M1 14 L5 10 L13 18 L27 4 L31 8 L13 26 z "
      />
    </svg>
  </div>
</div>
`;

exports[`StackedCheckBox should render "Checked with color" correctly 1`] = `
<div
  className="relative"
>
  <span
    className="absolute"
    style={
      Object {
        "left": 4,
        "top": -4,
        "zIndex": -1,
      }
    }
  >
    <div
      className="cursor-pointer"
      onClick={[Function]}
    >
      <div
        className="flex align-center justify-center rounded"
        style={
          Object {
            "backgroundColor": "#A989C5",
            "border": "2px solid #A989C5",
            "height": 16,
            "width": 16,
          }
        }
      >
        <svg
          className="Icon Icon-check"
          fill="currentcolor"
          height={12}
          name="check"
          size={12}
          style={
            Object {
              "color": "white",
            }
          }
          viewBox="0 0 32 32"
          width={12}
        >
          <path
            d="M1 14 L5 10 L13 18 L27 4 L31 8 L13 26 z "
          />
        </svg>
      </div>
    </div>
  </span>
  <div
    className="cursor-pointer"
    onClick={[Function]}
  >
    <div
      className="flex align-center justify-center rounded"
      style={
        Object {
          "backgroundColor": "#A989C5",
          "border": "2px solid #A989C5",
          "height": 16,
          "width": 16,
        }
      }
    >
      <svg
        className="Icon Icon-check"
        fill="currentcolor"
        height={12}
        name="check"
        size={12}
        style={
          Object {
            "color": "white",
          }
        }
        viewBox="0 0 32 32"
        width={12}
      >
        <path
          d="M1 14 L5 10 L13 18 L27 4 L31 8 L13 26 z "
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`StackedCheckBox should render "Checked" correctly 1`] = `
<div
  className="relative"
>
  <span
    className="absolute"
    style={
      Object {
        "left": 4,
        "top": -4,
        "zIndex": -1,
      }
    }
  >
    <div
      className="cursor-pointer"
      onClick={[Function]}
    >
      <div
        className="flex align-center justify-center rounded"
        style={
          Object {
            "backgroundColor": "#509EE3",
            "border": "2px solid #509EE3",
            "height": 16,
            "width": 16,
          }
        }
      >
        <svg
          className="Icon Icon-check"
          fill="currentcolor"
          height={12}
          name="check"
          size={12}
          style={
            Object {
              "color": "white",
            }
          }
          viewBox="0 0 32 32"
          width={12}
        >
          <path
            d="M1 14 L5 10 L13 18 L27 4 L31 8 L13 26 z "
          />
        </svg>
      </div>
    </div>
  </span>
  <div
    className="cursor-pointer"
    onClick={[Function]}
  >
    <div
      className="flex align-center justify-center rounded"
      style={
        Object {
          "backgroundColor": "#509EE3",
          "border": "2px solid #509EE3",
          "height": 16,
          "width": 16,
        }
      }
    >
      <svg
        className="Icon Icon-check"
        fill="currentcolor"
        height={12}
        name="check"
        size={12}
        style={
          Object {
            "color": "white",
          }
        }
        viewBox="0 0 32 32"
        width={12}
      >
        <path
          d="M1 14 L5 10 L13 18 L27 4 L31 8 L13 26 z "
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`StackedCheckBox should render "Off - Default" correctly 1`] = `
<div
  className="relative"
>
  <span
    className="absolute"
    style={
      Object {
        "left": 4,
        "top": -4,
        "zIndex": -1,
      }
    }
  >
    <div
      className="cursor-pointer"
      onClick={[Function]}
    >
      <div
        className="flex align-center justify-center rounded"
        style={
          Object {
            "backgroundColor": "white",
            "border": "2px solid #ddd",
            "height": 16,
            "width": 16,
          }
        }
      />
    </div>
  </span>
  <div
    className="cursor-pointer"
    onClick={[Function]}
  >
    <div
      className="flex align-center justify-center rounded"
      style={
        Object {
          "backgroundColor": "white",
          "border": "2px solid #ddd",
          "height": 16,
          "width": 16,
        }
      }
    />
  </div>
</div>
`;

exports[`Toggle should render "off" correctly 1`] = `
<a
  className="no-decoration "
  onClick={null}
  style={
    Object {
      "color": null,
    }
  }
/>
`;

exports[`Toggle should render "on" correctly 1`] = `
<a
  className="no-decoration undefined "
  onClick={null}
  style={
    Object {
      "color": null,
    }
  }
/>
`;
